<resources>
    <string name="app_name">Preferences</string>


    <string name="sync_pref">Sync</string>
    <string name="sync_pref_summary">
        Get your photos, videos, contacts, subscriptions etc on all your devices.
    </string>


    <string name="pref_syncConnectionType">Sync Connection Type</string>
    <string name="pref_syncConnectionType_dialog_title">Perform Sync using</string>
    <string name="pref_syncConnectionType_default_value">WiFi</string>
    <string name="pref_syncConnectionType_summary">WiFi</string>



    <string-array name="pref_syncConnectionType_entries">
        <item>WiFi</item>
        <item>Mobile Data</item>
        <item>WiFi/Mobile Data</item>
    </string-array>

    <string-array name="pref_syncConnectionType_values">
        <item>WiFi</item>
        <item>Mobile</item>
        <item>WiFi_Mobile</item>
    </string-array>


    <string-array name="pref_screen_mode_entries">
        <item>@string/light</item>
        <item>@string/dark</item>
        <item>@string/system_default</item>
    </string-array>


    <string-array name="pref_screen_mode_values">
        <item>@string/light</item>
        <item>@string/dark</item>
        <item>@string/system_default</item>
    </string-array>

    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>
    <string name="pref_screen_mode_key">pref_screen_mode</string>
    <string name="pref_screen_mode_summary">Select Day or Night Mode</string>
    <string name="pref_screen_mode_title">Screen Mode</string>


</resources>
